fix overflow in ie for recent imagery

--- a/app/javascript/components/map-v2/components/recent-imagery/components/recent-imagery-settings/recent-imagery-settings-styles.scss
+++ b/app/javascript/components/map-v2/components/recent-imagery/components/recent-imagery-settings/recent-imagery-settings-styles.scss
@@ -64,10 +64,12 @@
         align-items: center;
 
         .c-dropdown {
+          max-width: calc(50% - 30px);
           margin: rem(1px) rem(15px) 0 0;
         }
 
         .c-datepicker {
+          max-width: calc(50% - 30px);
           margin: 0 0 0 rem(15px);
         }
       }
@@ -96,7 +98,7 @@
     height: rem(300px);
     border-top: 1px solid rgba(#9e9e9e, 0.3);
     z-index: 1;
-    padding: rem(20px) 0 rem(25px);
+    padding: rem(20px) rem(20px) rem(20px);
 
     .header {
       position: relative;
@@ -105,7 +107,6 @@
       align-items: center;
       margin-bottom: rem(20px);
       z-index: 2;
-      padding: 0 rem(20px);
 
       .description {
         text-align: left;
@@ -127,13 +128,10 @@
       display: flex;
       flex-wrap: wrap;
       height: auto;
-      padding: 0 rem(20px);
-
-      @media screen and (min-width: $screen-m) {
-        overflow-y: auto;
-        -webkit-overflow-scrolling: touch;
-        height: rem(180px);
-      }
+      width: 100%;
+      min-width: 100%;
+      flex: 1;
+      margin-bottom: rem(20px);
 
       > * {
         margin: 0 rem(5px) rem(5px) 0;
@@ -142,6 +140,13 @@
         &:nth-child(3n) {
           margin-right: 0;
         }
+      }
+
+      @media screen and (min-width: $screen-m) {
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+        height: rem(180px);
+        margin-bottom: 0;
       }
     }
   }
